# vidicant

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  PYTHON.md  README.md  USERGUIDE.md  e2e.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
examples/: .gitignore
include/: controller.hpp
include/vidicant/: hello.hpp  image.hpp  video.hpp
src/: controller.cpp  hello.cpp  image.cpp  main.cpp  video.cpp  vidicant_py.cpp
test/: CMakeLists.txt  test_image.cpp  test_video.cpp
vidicant/: __init__.py
